# spiral-desktop

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.cursor/rules/: components-common.mdc
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: art_cache.rs  artist_art_fetch.rs  audio_formats.rs  cover_art_fetch.rs  db.rs  import_files.rs  lib.rs  library_paths.rs  macos_library_picker.rs  main.rs  media_shortcuts.rs  metadata_backup.rs  metadata_writer.rs  models.rs  session.rs  settings.rs  track_list_prefs.rs
src-tauri/src/commands/: artist_images.rs  files.rs  library.rs  library_settings.rs  metadata.rs  mod.rs  playback_session.rs  playlists.rs  themes.rs  track_list_preferences.rs
src-tauri/tests/fixtures/: moov_before_mdat.m4a
src-tauri/themes/builtin/: grove.theme.json  noir.theme.json  obsidian.theme.json  parchment.theme.json
src/components/: icons.tsx
src/hooks/: useAlbumEditMenu.tsx  useArtistEditMenu.tsx  useAssetUrl.ts  useContextMenu.ts  useDeletePlaylistDialog.tsx  useFocusTrap.ts  useMediaHotkeys.ts  usePlaybackSessionPersistence.ts  usePlaylistSidebarMenu.tsx  useTrackEditMenu.tsx
src/lib/: activeTrackList.ts  albumMetadata.ts  albums.ts  appMenu.ts  artistArt.ts  artistBrowsePreferences.test.ts  artistBrowsePreferences.ts  artistMetadata.ts  artistNameSuggestions.ts  artistNames.test.ts  artistNames.ts  artists.test.ts  artists.ts  assetUrl.ts  audio.ts  audioAnalyser.ts  contextMenuPosition.ts  discographyTimeline.ts  dragDrop.ts  (+21 more)
(+129 files in other folders)
